[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raid-ledger"
version = "0.5.0"
description = "Weekly M+ accountability system for WoW CE progression guilds"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
    "respx>=0.21",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.18",
    "pandas>=2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit live APIs (deselect with '-m not integration')",
]
testpaths = ["tests"]
